--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES entity.hpp
                  component.hpp
                  component_array.hpp
                  component_manager.hpp
-                 signature.hpp
+                 manager_manager.hpp
                  system.hpp
                  system_manager.hpp
                  Components/transform.hpp)
